# quant-go-rust-demo

./: .gitignore  Cargo.toml  README.md  config.example.toml  config.toml
benches/: execution.rs
docs/: QuantJD.md  message.txt
docs/plans/: 2026-02-06-solana-arbitrage-design.md  2026-03-03-real-swap-execution-design.md  2026-03-03-real-swap-execution.md
src/: lib.rs  main.rs
src/adapters/: metrics_collector.rs  mod.rs  orca_feed.rs  orca_swap.rs  pool_state.rs  raydium_feed.rs  raydium_swap.rs  solana_executor.rs
src/domain/: entities.rs  events.rs  mod.rs
src/domain/services/: execution_coordinator.rs  mod.rs  opportunity_detector.rs  position_tracker.rs  trade_validator.rs
src/infrastructure/: config.rs  mod.rs  nats.rs
tests/: integration_test.rs
