[package]
name = "solana-arb"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-nats = "0.35"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
solana-client = "2.0"
solana-sdk = "2.0"
tokio-tungstenite = "0.24"
futures-util = "0.3"
anyhow = "1.0"
thiserror = "2.0"
toml = "0.8"
atomic_float = "1.1"
